--- a/Driving Game/Source/Game/data/config.json
+++ b/Driving Game/Source/Game/data/config.json
@@ -5,11 +5,11 @@
 		"x": 256,
 		"y": 256
 	},
-	"rngSeed": 0,
+	"rngSeed": -1,
 	"monitor": 0,
 	"useLibOVR": false,
-	"nodeCounting": true,
-	"title": "Driving Game",
+	"nodeCounting": false,
+	"title": "DRIVE FOREVER",
 	"gain":{
 		"master": 1,
 		"music": 1,
