normal case title

--- a/Driving Game/Source/Game/data/config.json
+++ b/Driving Game/Source/Game/data/config.json
@@ -9,7 +9,7 @@
 	"monitor": 0,
 	"useLibOVR": false,
 	"nodeCounting": false,
-	"title": "DRIVE FOREVER",
+	"title": "Drive Forever",
 	"gain":{
 		"master": 1,
 		"music": 1,
